@@ -257,6 +257,7 @@ v1.5.1
  * bugfix: see did not work on the latest word
  * bugfix: e.g. 'A' was parsed as 'a'
  * bugfix: case insensitivity did not work for z/Z
+ * editor: use fg to bring back editor instead of RESTORE
  * disk: added include (e.g. "include gfx" loads gfx module)
  * disk: added device ( device# -- ) to switch active device
  * disk: renamed load => included
